--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t tarunsingh/multi-server ./server
   - docker build -t tarunsingh/multi-worker ./worker
   #login in to the docker cli
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --pasword-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   #take those images and push them to 
   - docker push tarunsingh/multi-client
   - docker push tarunsingh/multi-nginx
