--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ sudo: required
 language: generic
 
 before_install:
-  - docker build -t tarunsingh/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t tarunsingh28/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tarunsingh/react-test npm test -- --coverage
+  - docker run -e CI=true tarunsingh28/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t tarunsingh/multi-client ./client
-  - docker build -t tarunsingh/multi-nginx ./nginx
-  - docker build -t tarunsingh/multi-server ./server
-  - docker build -t tarunsingh/multi-worker ./worker
+  - docker build -t tarunsingh28/multi-client ./client
+  - docker build -t tarunsingh28/multi-nginx ./nginx
+  - docker build -t tarunsingh28/multi-server ./server
+  - docker build -t tarunsingh28/multi-worker ./worker
   #login in to the docker cli using id and password
   - docker login -u "$DOCKER_ID" -p "$DOCKER_PASSWORD" --password-stdin
   #take those images and push them to 
-  - docker push tarunsingh/multi-client
-  - docker push tarunsingh/multi-nginx
-  - docker push tarunsingh/multi-server
-  - docker push tarunsingh/multi-worker
+  - docker push tarunsingh28/multi-client
+  - docker push tarunsingh28/multi-nginx
+  - docker push tarunsingh28/multi-server
+  - docker push tarunsingh28/multi-worker
