--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t tarunsingh28/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tarunsingh28/react-test npm test -- --coverage
+  - docker run -e CI=true tarunsingh28/react-test npm test
 
 after_success:
   - docker build -t tarunsingh28/multi-client ./client
@@ -14,7 +14,7 @@ after_success:
   - docker build -t tarunsingh28/multi-server ./server
   - docker build -t tarunsingh28/multi-worker ./worker
   #login in to the docker cli using id and password
-  - docker login docker.io -u "$DOCKER_ID" -p "$DOCKER_PASSWORD" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login docker.io -u "$DOCKER_ID" --password-stdin
   #take those images and push them to 
   - docker push tarunsingh28/multi-client
   - docker push tarunsingh28/multi-nginx
